--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <input type="file" id="inputB" accept="image/*" class="hidden">
         <button id="processButton" class="hidden">Process Images</button>
         <button id="downloadButton" class="hidden">Download ZIP</button>
-        <canvas id="canvas" class="hidden"></canvas>
+        <div id="resultContainer"></div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.7.1/jszip.min.js"></script>
     <script src="main.js"></script>
